Phase 1 Enhanced: Added CLI arguments, ASCII banner, and byte statistics
- Added command-line parser with multiple options (--help, --version, --offset, --length, --no-color, --strings-only)
- Implemented ASCII art banner with version info
- Added byte statistics with NULL%, printable%, control%, extended ASCII percentages
- Implemented entropy calculation for packed/encrypted binary detection
- Enhanced error messages with color coding
- Improved strings-only mode for better usability
- Code refactoring for better modularity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
     src/hex_viewer.cpp
     src/hash_calculator.cpp
     src/pe_parser.cpp
+    src/cli_parser.cpp
 )
 
 # Include directories
