--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Install dependencies (Ubuntu)
       if: runner.os == 'Linux'
@@ -28,17 +28,28 @@ jobs:
       run: |
         brew install cmake openssl
     
-    - name: Install dependencies (Windows)
+    - name: Setup MSVC (Windows)
+      if: runner.os == 'Windows'
+      uses: ilammy/msvc-dev-cmd@v1
+    
+    - name: Install OpenSSL (Windows)
       if: runner.os == 'Windows'
       run: |
-        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
-        choco install openssl
-    
-    - name: Configure CMake
+        choco install openssl -y
+        
+    - name: Configure CMake (Windows)
+      if: runner.os == 'Windows'
       run: |
         mkdir build
         cd build
-        cmake ..
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR="C:/Program Files/OpenSSL-Win64"
+    
+    - name: Configure CMake (Linux/macOS)
+      if: runner.os != 'Windows'
+      run: |
+        mkdir build
+        cd build
+        cmake .. -DCMAKE_BUILD_TYPE=Release
     
     - name: Build
       run: |
@@ -61,14 +72,14 @@ jobs:
     
     - name: Upload artifact (Linux/macOS)
       if: runner.os != 'Windows'
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: binanalyzer-${{ matrix.os }}
         path: build/binanalyzer
     
     - name: Upload artifact (Windows)
       if: runner.os == 'Windows'
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: binanalyzer-${{ matrix.os }}
         path: build/Release/binanalyzer.exe
