--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,8 +10,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        
+        os: [ubuntu-latest, macos-latest]
+        # windows-latest - TODO: Fix OpenSSL path
     runs-on: ${{ matrix.os }}
     
     steps:
