Phase 2 Complete: Red Team Edition with Import Analysis
Features Added:
- Suspicious API detection with 100+ catalogued APIs
- Threat level scoring (INFO/LOW/MEDIUM/HIGH/CRITICAL)
- 12 category-based classification system
- Platform-aware analysis (PE-only, ELF coming soon)
- Performance optimizations (2MB scan limit, 50 API limit)
- Progress indicators for large files
- Fixed padding/overflow issues with long filenames

CLI Enhancements:
- Added --red-team / -r flag
- Enhanced banner with Red Team Edition branding

Bug Fixes:
- Fixed infinite loop on large PE files
- Fixed padding calculation overflow
- Fixed false positives on ELF files
- Optimized string matching performance

Tested with production binary (putty.exe 1.7MB) - all tests passing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES
     src/hash_calculator.cpp
     src/pe_parser.cpp
     src/cli_parser.cpp
+    src/import_analyzer.cpp
 )
 
 # Include directories
