Phase 2 Complete: Advanced Offensive Security Analysis
Major Features Added:
===================

1. PACKER DETECTION
   - UPX, Themida, VMProtect, ASPack, PECompact, MPRESS
   - Section name pattern matching
   - High entropy detection (>7.0)
   - Entry point anomaly detection
   - Import count analysis
   - Confidence scoring system

2. SHELLCODE PATTERN DETECTION
   - NOP sled detection (20+ consecutive 0x90)
   - GetPC techniques (CALL/POP, FNSTENV)
   - Egg hunter patterns
   - Metasploit encoder stubs
   - WinExec shellcode signatures
   - Pattern matching with masks

3. NETWORK IOC EXTRACTION
   - IPv4 address extraction (manual parsing, no regex)
   - Domain detection (14 TLDs)
   - URL extraction (http/https/ftp)
   - Email address validation
   - Context extraction for each IOC

4. SUSPICIOUS STRINGS ANALYSIS
   - 60+ keyword categories
   - Crypto keywords (AES, RC4, XOR, Base64)
   - Anti-VM (VMware, VirtualBox, QEMU)
   - Anti-Debug (IsDebuggerPresent, CheckRemoteDebugger)
   - Persistence mechanisms (Run keys, schtasks)
   - Sandbox detection (Cuckoo, joe.exe)
   - Reconnaissance (ipconfig, whoami, systeminfo)
   - Lateral movement (psexec, net use, WMI)
   - Data exfiltration indicators
   - Malware APIs (CreateRemoteThread, VirtualAllocEx)
   - Suspicion scoring (0.0-1.0)

Red Team Analysis Mode:
======================
6-Stage comprehensive analysis:
- Stage 1: Import Table Analysis (50 suspicious APIs)
- Stage 2: Security Mitigations (ASLR/DEP/CFG/SEH)
- Stage 3: Packer Detection (entropy + signatures)
- Stage 4: Shellcode Patterns (5+ detection methods)
- Stage 5: Network IOCs (IPs, domains, URLs, emails)
- Stage 6: Suspicious Strings (10 categories)

Final summary with aggregated statistics

Technical Implementation:
========================
- Zero regex dependencies (manual parsing for stability)
- Performance optimized (2MB scan limit)
- False positive reduction
- Professional colored output
- Extensible architecture

Tested with putty.exe (1.7M

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
     src/cli_parser.cpp
     src/import_analyzer.cpp
     src/security_analyzer.cpp
+    src/advanced_analyzer.cpp
 )
 
 # Include directories
