--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,14 @@
 cmake_minimum_required(VERSION 3.15)
-project(BinAnalyzer VERSION 1.0.0 LANGUAGES CXX)
+project(BinAnalyzer)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Compiler flags
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    add_compile_options(-Wall -Wextra -Wpedantic -O2)
-endif()
+find_package(OpenSSL REQUIRED)
 
-# Source files
-set(SOURCES
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
+add_executable(binanalyzer
     src/main.cpp
     src/file_handler.cpp
     src/hex_viewer.cpp
@@ -20,18 +17,11 @@ set(SOURCES
     src/cli_parser.cpp
     src/import_analyzer.cpp
     src/security_analyzer.cpp
+    src/packer_detector.cpp
+    src/shellcode_detector.cpp
+    src/ioc_extractor.cpp
+    src/string_analyzer.cpp
     src/advanced_analyzer.cpp
 )
 
-# Include directories
-include_directories(${PROJECT_SOURCE_DIR}/include)
-
-# Executable
-add_executable(binanalyzer ${SOURCES})
-
-# Link OpenSSL for hash calculations
-find_package(OpenSSL REQUIRED)
-target_link_libraries(binanalyzer OpenSSL::SSL OpenSSL::Crypto)
-
-# Install
-install(TARGETS binanalyzer DESTINATION bin)
+target_link_libraries(binanalyzer OpenSSL::Crypto)
