--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,11 +1,9 @@
 name: C/C++ CI
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build:
     strategy:
@@ -21,12 +19,12 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake libssl-dev
+        sudo apt-get install -y build-essential cmake libssl-dev libcapstone-dev
     
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
       run: |
-        brew install cmake openssl
+        brew install cmake openssl capstone
     
     - name: Setup MSVC (Windows)
       if: runner.os == 'Windows'
