fix: Properly detect Capstone on macOS
- Add find_path for Capstone headers
- Include /opt/homebrew paths for Apple Silicon
- Add debug messages for library detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,27 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Find required packages
 find_package(OpenSSL REQUIRED)
 
-# Find Capstone
-find_library(CAPSTONE_LIBRARY capstone REQUIRED)
+# Find Capstone library and headers
+find_library(CAPSTONE_LIBRARY 
+    NAMES capstone
+    PATHS /usr/lib /usr/local/lib /opt/homebrew/lib
+    REQUIRED
+)
+
+find_path(CAPSTONE_INCLUDE_DIR 
+    NAMES capstone/capstone.h
+    PATHS /usr/include /usr/local/include /opt/homebrew/include
+    REQUIRED
+)
+
+message(STATUS "Capstone library: ${CAPSTONE_LIBRARY}")
+message(STATUS "Capstone include: ${CAPSTONE_INCLUDE_DIR}")
 
 # Include directories
-include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(
+    ${CMAKE_SOURCE_DIR}/include
+    ${CAPSTONE_INCLUDE_DIR}
+)
 
 # Source files
 add_executable(binanalyzer
