feat: Add CFG, Basic Block, Function and XRef analysis
- Control Flow Graph generation and visualization
- Basic block identification with successor/predecessor tracking
- Function boundary detection with prologue/epilogue patterns
- Cross-reference analysis (calls, jumps, data refs)
- Performance optimized (8K instruction limit in default mode)
- Minimal clean output with flag hints
- Support for x86/x64/ARM/ARM64/Thumb architectures

New flags:
  --cfg         Show control flow graphs
  --blocks      List basic blocks
  --functions   Detect and list functions
  --xref <addr> Show cross-references

Phase 1 Advanced Binary Analysis: COMPLETE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,10 @@ add_executable(binanalyzer
     src/string_analyzer.cpp
     src/advanced_analyzer.cpp
     src/disassembler.cpp
+    src/basic_block.cpp
+    src/function_analyzer.cpp
+    src/cfg_analyzer.cpp
+    src/xref_analyzer.cpp
 )
 
 # Link libraries
